--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'io.qameta.allure' version '2.14.0'
-    id 'io.freefair.lombok' version '6.0.0-m2'
+    id 'io.qameta.allure' version '2.8.1'
+    id 'io.freefair.lombok' version '5.2.1'
 }
 
 group 'ru.netology'
